# python-ai-template

./: .env.example  .gitignore  Makefile  README.md  config.yaml  pyproject.toml
.cursor/: rules
src/my_project/: config.py  main.py
src/my_project/models/: base.py
src/my_project/services/: llm_client.py
tests/: smoke_test.py
